--- a/netlify.toml
+++ b/netlify.toml
@@ -19,6 +19,11 @@
     Cache-Control = "public, max-age=31536000"
 
 [[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+
+[[redirects]]
   from = "/admin"
   to = "/admin/index.html"
   status = 200
