--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "python -m http.server 8000",
     "dev": "python -m http.server 3000",
-    "build": "echo 'Build completed - static files ready'",
-    "deploy": "echo 'Deploy to Netlify via Git push'",
+    "build-css": "tailwindcss -i ./input.css -o ./styles.css --watch",
+    "build": "tailwindcss -i ./input.css -o ./styles.css --minify",
+    "deploy": "npm run build && echo 'Deploy to Vercel via Git push'",
     "test": "echo 'Testing landing page functionality'"
   },
   "keywords": [
@@ -25,7 +26,9 @@
     "url": "https://github.com/phoenix-english-school/recruitment-landing"
   },
   "homepage": "https://phoenix-recruitment.netlify.app",
-  "devDependencies": {},
+  "devDependencies": {
+    "tailwindcss": "^3.4.18"
+  },
   "dependencies": {
     "googleapis": "^118.0.0"
   },
