--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "python -m http.server 8000",
     "dev": "python -m http.server 3000",
-    "build-css": "tailwindcss -i ./input.css -o ./styles.css --watch",
-    "build": "tailwindcss -i ./input.css -o ./styles.css --minify",
-    "deploy": "npm run build && echo 'Deploy to Vercel via Git push'",
+    "build": "echo 'Build completed - static files ready'",
+    "deploy": "echo 'Deploy to Vercel via Git push'",
     "test": "echo 'Testing landing page functionality'"
   },
   "keywords": [
@@ -16,8 +15,7 @@
     "english",
     "school",
     "recruitment",
-    "landing-page",
-    "netlify"
+    "landing-page"
   ],
   "author": "Phoenix English School",
   "license": "MIT",
@@ -26,9 +24,7 @@
     "url": "https://github.com/phoenix-english-school/recruitment-landing"
   },
   "homepage": "https://phoenix-recruitment.netlify.app",
-  "devDependencies": {
-    "tailwindcss": "^3.4.18"
-  },
+  "devDependencies": {},
   "dependencies": {
     "googleapis": "^118.0.0"
   },
